# helmderiv

./: .gitmodules  CMakeLists.txt  Helm.h  Untitled.ipynb  check_vals.py  eigen_eos.cpp  main.cpp  mixderiv.h
snippets/: Nderiv.cpp  eigen_eos.cpp
